# keepass-qt

./: .clangd  .gitignore  CLAUDE.md  CMakeLists.txt  Doxyfile  FEATURE_COMPARISON.md  MFC_TO_QT_MIGRATION_GUIDE.md  MILESTONE.md  PHASE1_COMPLETE.md  README.md  TASKS.md
docs/: DOCUMENTATION_GUIDE.md  PERFORMANCE.md
resources/: resources.qrc
src/: main.cpp
src/autotype/: AutoTypeConfig.cpp  AutoTypeConfig.h  AutoTypeMatcher.cpp  AutoTypeMatcher.h  AutoTypeSequence.cpp  AutoTypeSequence.h  AutoTypeStub.cpp  CMakeLists.txt  GlobalHotkey.h
src/autotype/platform/: AutoTypeMac.cpp  AutoTypeMac.h  AutoTypePlatform.cpp  AutoTypePlatform.h  GlobalHotkey_mac.cpp  GlobalHotkey_stub.cpp  WindowManager.cpp  WindowManager.h  WindowManagerMac.cpp  WindowManagerMac.h
src/core/: CMakeLists.txt  PasswordGenerator.cpp  PasswordGenerator.h  PwConstants.h  PwManager.cpp  PwManager.h  PwStructs.h  SprEngine.cpp  SprEngine.h  SysDefEx.h  UpdateChecker.cpp  UpdateChecker.h
src/core/crypto/: KeyTransform.cpp  KeyTransform.h  MemoryProtection.cpp  MemoryProtection.h  SHA256.cpp  SHA256.h  Twofish.cpp  TwofishClass.cpp  TwofishClass.h
src/core/crypto/SHA2/: SHA2.cpp
src/core/io/: PwExport.cpp  PwExport.h  PwImport.cpp  PwImport.h
src/core/platform/: MemoryProtection.h  MemoryProtection_unix.cpp  PwSettings.cpp  PwSettings.h
src/core/util/: CsvUtil.cpp  CsvUtil.h  MemUtil.cpp  MemUtil.h  PwUtil.cpp  PwUtil.h  Random.cpp  Random.h
src/gui/: AddEntryDialog.cpp  AddEntryDialog.h  AddGroupDialog.cpp  AddGroupDialog.h  AutoTypeSelectionDialog.cpp  AutoTypeSelectionDialog.h  CMakeLists.txt  ChangeMasterKeyDialog.cpp  ChangeMasterKeyDialog.h  CsvExportDialog.cpp  CsvExportDialog.h  CsvImportDialog.cpp  CsvImportDialog.h  DatabaseSettingsDialog.cpp  DatabaseSettingsDialog.h  EntropyCollectorDialog.cpp  EntropyCollectorDialog.h  EntryModel.cpp  EntryModel.h  ExportOptionsDialog.cpp  ExportOptionsDialog.h  FieldRefDialog.cpp  FieldRefDialog.h  FindDialog.cpp  FindDialog.h  GroupModel.cpp  GroupModel.h  GuiStub.cpp  IconManager.cpp  IconManager.h  IconPickerDialog.cpp  IconPickerDialog.h  LanguagesDialog.cpp  LanguagesDialog.h  MainWindow.cpp  MainWindow.h  MassModifyDialog.cpp  MassModifyDialog.h  MasterKeyDialog.cpp  MasterKeyDialog.h  (+12 more)
src/plugins/: CMakeLists.txt  KpPluginInterface.h  PluginManager.cpp  PluginManager.h
tests/: CMakeLists.txt  RESULTS.txt  mfc-reference.kdb  test_crypto_primitives.cpp  test_mfc_compatibility.cpp  test_performance.cpp  test_pwmanager.cpp
tests/tools/: CMakeLists.txt  generate_validation_suite.cpp
tests/validation-package/: MANIFEST.md  VALIDATION.md  test-attachment.kdb  test-complex-aes.kdb  test-empty-aes.kdb  test-highrounds.kdb  test-lowrounds.kdb  test-simple-aes.kdb  test-simple-twofish.kdb  test-unicode.kdb
translations/: keepass_de.ts  keepass_en.ts  keepass_es.ts  keepass_fr.ts
